--- a/config_tproxy.json
+++ b/config_tproxy.json
@@ -91,7 +91,7 @@
       { "domain_suffix": [".ddqq.top", ".ddqq.fun", ".alibar.us.kg", ".ddqq.cloudns.org", ".ali88.ggff.net", ".hkdvb.com"], "outbound": "🎯 全球直连" },
       { "ip_cidr": ["148.135.102.83/32", "148.135.85.14/32", "38.207.172.193/32", "198.46.226.139/32", "85.194.246.115/32", "159.138.41.49/32", "156.226.171.65/32"], "outbound": "🎯 全球直连" },
       { "domain_suffix": ".nebula-media.org", "outbound": "🇺🇲 美国节点" },
-      { "domain_suffix": ".hinet.net", "outbound": "🇹🇼 台湾节点" },
+      { "domain_suffix": [".hinet.net", ".4gtv.tv"]"outbound": "🇹🇼 台湾节点" },
       { "rule_set": "geosite-category-ads-all", "outbound": "🛑 广告拦截" },
       { "clash_mode": "direct", "outbound": "🎯 全球直连" },
       { "clash_mode": "global", "outbound": "GLOBAL" },
