--- a/config_tproxy.json
+++ b/config_tproxy.json
@@ -73,7 +73,7 @@
     { "tag": "🇯🇵 日本节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇯🇵|JP|jp|日本|日|Japan"] }] },
     { "tag": "🇰🇷 韩国节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["kr|韩|KR|korea"] }] },
     { "tag": "🇺🇲 美国节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇺🇸|US|us|美国|美|United States"] }] },
-    { "tag": "⭕ 欧洲节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["eu|EU|DE|PL|德国|波兰|Europ"] }] },
+    { "tag": "⭕ 欧洲节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["eu|EU|DE|PL|德国|波兰|Europ"] }, { "action": "exclude", "keywords": ["美|美国"] }] },
     { "tag": "🔯 香港自动", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇭🇰|HK|hk|香港|港|HongKong"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
     { "tag": "♻️ 自动选择", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "exclude", "keywords": ["网站|地址|剩余|过期|时间|有效"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
     { "tag": "GLOBAL", "type": "selector", "outbounds": ["♻️ 自动选择", "🎯 全球直连", "🇭🇰 香港节点", "🇹🇼 台湾节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇰🇷 韩国节点", "🇺🇲 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
