--- a/configfull_v6.yaml
+++ b/configfull_v6.yaml
@@ -8,7 +8,7 @@ proxy-providers:
       url: https://www.gstatic.com/generate_204
       interval: 300
     proxy: 🟢 直连
-    url: "https://sub.ddqq.top/CzKVxMbYf6te7cvPwpdp/download/collection/ALL_Domain?target=ClashMeta"
+    url: ""
     override:
       skip-cert-verify: true
 
