--- a/1.12.x/config_tun_mobile_v4.json
+++ b/1.12.x/config_tun_mobile_v4.json
@@ -26,27 +26,21 @@
         "tag": "proxyDns",
         "address": "https://dns.google/dns-query",
         "detour": "🚀 节点选择",
-        "strategy": {
-          "type": "ipv4_only",
-          "resolver": "defaultDns"
-        }
+        "address_resolver": "defaultDns",
+        "address_strategy": "ipv4_only"
       },
       {
         "tag": "localDns",
         "address": "223.5.5.5",
         "detour": "🎯 全球直连",
-        "strategy": {
-          "type": "ipv4_only",
-          "resolver": "defaultDns"
-        }
+        "address_resolver": "defaultDns",
+        "address_strategy": "ipv4_only"
       },
       {
         "tag": "defaultDns",
         "address": "223.5.5.5",
         "detour": "🎯 全球直连",
-        "strategy": {
-          "type": "ipv4_only"
-        }
+        "address_strategy": "ipv4_only"
       }
     ],
     "rules": [
@@ -88,27 +82,27 @@
   ],
   
   "outbounds": [
-    { "tag": "🚀 节点选择", "type": "selector", "outbounds": ["🔯 香港自动", "🇭㉿ 香港节点", "🇹㉿ 台湾节点", "🇸㉿ 新加坡节点", "🇯㉿ 日本节点", "🇺㉿ 美国节点", "⭕ 欧洲节点", "🇰㉿ 韩国节点", "🐸 手动切换", "♻️ 自动选择", "🎯 全球直连"] },
-    { "tag": "📹 YouTube", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭㉿ 香港节点", "🇹㉿ 台湾节点", "🇸㉿ 新加坡节点", "🇯㉿ 日本节点", "🇰㉿ 韩国节点", "🇺㉿ 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
-    { "tag": "🤖 OpenAI", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭㉿ 香港节点", "🇹㉿ 台湾节点", "🇸㉿ 新加坡节点", "🇯㉿ 日本节点", "🇰㉿ 韩国节点", "🇺㉿ 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
-    { "tag": "🍀 Google", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭㉿ 香港节点", "🇹㉿ 台湾节点", "🇸㉿ 新加坡节点", "🇯㉿ 日本节点", "🇰㉿ 韩国节点", "🇺㉿ 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
-    { "tag": "📲 Telegram", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭㉿ 香港节点", "🇹㉿ 台湾节点", "🇸㉿ 新加坡节点", "🇯㉿ 日本节点", "🇰㉿ 韩国节点", "🇺㉿ 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
-    { "tag": "🎵 TikTok", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭㉿ 香港节点", "🇹㉿ 台湾节点", "🇸㉿ 新加坡节点", "🇯㉿ 日本节点", "🇰㉿ 韩国节点", "🇺㉿ 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
-    { "tag": "🎥 Netflix", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭㉿ 香港节点", "🇹㉿ 台湾节点", "🇸㉿ 新加坡节点", "🇯㉿ 日本节点", "🇰㉿ 韩国节点", "🇺㉿ 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
-    { "tag": "🪟 Microsoft", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭㉿ 香港节点", "🇹㉿ 台湾节点", "🇸㉿ 新加坡节点", "🇯㉿ 日本节点", "🇰㉿ 韩国节点", "🇺㉿ 美国节点", "⭕ 欧洲节点", "🎯 全球直连"] },
-    { "tag": "🍎 Apple", "type": "selector", "outbounds": ["🎯 全球直连", "🇭㉿ 香港节点", "🇹㉿ 台湾节点", "🇸㉿ 新加坡节点", "🇯㉿ 日本节点", "🇰㉿ 韩国节点", "🇺㉿ 美国节点", "⭕ 欧洲节点"] },
+    { "tag": "🚀 节点选择", "type": "selector", "outbounds": ["🔯 香港自动", "🇭🇰 香港节点", "🇹🇼 台湾节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇺🇲 美国节点", "⭕ 欧洲节点", "🇰🇷 韩国节点", "🐸 手动切换", "♻️ 自动选择", "🎯 全球直连"] },
+    { "tag": "📹 YouTube", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇹🇼 台湾节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇰🇷 韩国节点", "🇺🇲 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
+    { "tag": "🤖 OpenAI", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇹🇼 台湾节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇰🇷 韩国节点", "🇺🇲 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
+    { "tag": "🍀 Google", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇹🇼 台湾节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇰🇷 韩国节点", "🇺🇲 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
+    { "tag": "📲 Telegram", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇹🇼 台湾节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇰🇷 韩国节点", "🇺🇲 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
+    { "tag": "🎵 TikTok", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇹🇼 台湾节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇰🇷 韩国节点", "🇺🇲 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
+    { "tag": "🎥 Netflix", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇹🇼 台湾节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇰🇷 韩国节点", "🇺🇲 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
+    { "tag": "🪟 Microsoft", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🔯 香港自动", "🇭🇰 香港节点", "🇹🇼 台湾节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇰🇷 韩国节点", "🇺🇲 美国节点", "⭕ 欧洲节点", "🎯 全球直连"] },
+    { "tag": "🍎 Apple", "type": "selector", "outbounds": ["🎯 全球直连", "🇭🇰 香港节点", "🇹🇼 台湾节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇰🇷 韩国节点", "🇺🇲 美国节点", "⭕ 欧洲节点"] },
     { "tag": "🐠 漏网之鱼", "type": "selector", "outbounds": ["🚀 节点选择", "🎯 全球直连"] },
     { "tag": "🐸 手动切换", "type": "selector", "outbounds": ["{all}"] },
-    { "tag": "🇭㉿ 香港节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇭㉿|HK|hk|香港|港|HongKong"] }] },
-    { "tag": "🇹㉿ 台湾节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇹㉿|TW|tw|台湾|台|TaiWang"] }] },
-    { "tag": "🇸㉿ 新加坡节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇸㉿|新加坡|SG|SINGAPORE|Singapore"] }] },
-    { "tag": "🇯㉿ 日本节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇯㉿|JP|jp|日本|日|Japan"] }] },
-    { "tag": "🇰㉿ 韩国节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["kr|韩|KR|korea"] }] },
-    { "tag": "🇺㉿ 美国节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇺㉿|US|us|美国|美|United States"] }] },
+    { "tag": "🇭🇰 香港节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇭🇰|HK|hk|香港|港|HongKong"] }] },
+    { "tag": "🇹🇼 台湾节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇹🇼|TW|tw|台湾|台|TaiWang"] }] },
+    { "tag": "🇸🇬 新加坡节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇸🇬|新加坡|SG|SINGAPORE|Singapore"] }] },
+    { "tag": "🇯🇵 日本节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇯🇵|JP|jp|日本|日|Japan"] }] },
+    { "tag": "🇰🇷 韩国节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["kr|韩|KR|korea"] }] },
+    { "tag": "🇺🇲 美国节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇺🇲|US|us|美国|美|United States"] }] },
     { "tag": "⭕ 欧洲节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["eu|EU|DE|PL|德国|波兰|Europ"] }] },
-    { "tag": "🔯 香港自动", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇭㉿|HK|hk|香港|港|HongKong"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
+    { "tag": "🔯 香港自动", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇭🇰|HK|hk|香港|港|HongKong"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
     { "tag": "♻️ 自动选择", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "exclude", "keywords": ["网站|地址|剩余|过期|时间|有效"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
-    { "tag": "GLOBAL", "type": "selector", "outbounds": ["♻️ 自动选择", "🎯 全球直连", "🇭㉿ 香港节点", "🇹㉿ 台湾节点", "🇸㉿ 新加坡节点", "🇯㉿ 日本节点", "🇰㉿ 韩国节点", "🇺㉿ 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
+    { "tag": "GLOBAL", "type": "selector", "outbounds": ["♻️ 自动选择", "🎯 全球直连", "🇭🇰 香港节点", "🇹🇼 台湾节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇰🇷 韩国节点", "🇺🇲 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
     { "tag": "🎯 全球直连", "type": "direct" },
     { "tag": "🛑 全部阻断", "type": "block" },
     { "tag": "🛑 广告拦截", "type": "selector", "outbounds": ["🛑 全部阻断", "🎯 全球直连", "🚀 节点选择"] },
@@ -126,8 +120,8 @@
       { "domain": ["clash.razord.top", "yacd.metacubex.one", "yacd.haishan.me", "d.metacubex.one"], "outbound": "🎯 全球直连" },
       { "domain_suffix": [".ddqq.top", ".ddqq.fun", ".alibar.us.kg", ".ddqq.cloudns.org", ".ali88.ggff.net", ".hkdvb.com"], "outbound": "🎯 全球直连" },
       { "ip_cidr": ["148.135.102.83/32", "148.135.85.14/32", "38.207.172.193/32", "198.46.226.139/32", "85.194.246.115/32", "159.138.41.49/32", "156.226.171.65/32"], "outbound": "🎯 全球直连" },
-      { "domain_suffix": ".nebula-media.org", "outbound": "🇺㉿ 美国节点" },
-      { "domain_suffix": ".hinet.net", "outbound": "🇹㉿ 台湾节点" },
+      { "domain_suffix": ".nebula-media.org", "outbound": "🇺🇲 美国节点" },
+      { "domain_suffix": ".hinet.net", "outbound": "🇹🇼 台湾节点" },
       { "source_ip_is_private": true, "outbound": "🎯 全球直连" },
       { "domain_suffix": [".qichiyu.com"], "outbound": "🚀 节点选择" },
       { "rule_set": "geosite-openai", "outbound": "🤖 OpenAI" },
