--- a/1.12.x/config_tproxy_v4.json
+++ b/1.12.x/config_tproxy_v4.json
@@ -105,14 +105,12 @@
     { "tag": "♻️ 自动选择", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "exclude", "keywords": ["网站|地址|剩余|过期|时间|有效"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
     { "tag": "GLOBAL", "type": "selector", "outbounds": ["♻️ 自动选择", "🎯 全球直连", "🇭🇰 香港节点", "🇹🇼 台湾节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇰🇷 韩国节点", "🇺🇲 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
     { "tag": "🎯 全球直连", "type": "direct" },
-    { "tag": "🛑 全部阻断", "type": "block" },
-    { "tag": "🛑 广告拦截", "type": "selector", "outbounds": ["🛑 全部阻断", "🎯 全球直连", "🚀 默认代理"] },
-    { "tag": "dns-out", "type": "dns" }
   ],
   
   "route": {
     "rules": [
-      { "type": "logical", "mode": "or", "rules": [{ "port": 53 }, { "protocol": "dns" }], "outbound": "dns-out" },
+      {"action": "sniff", "sniffer": ["http", "tls", "quic", "dns"]},
+      {"inbound": "dns-in", "action": "hijack-dns"},
       { "port": [9993, 5443, 6443, 8008, 8080, 8443, 21114, 21115, 21116, 21117, 21118, 21119], "outbound": "🎯 全球直连" },
       { "source_port": [9993, 5000, 5001, 80, 443, 5080, 8000, 8008, 8080, 8800, 9350, 10002, 20000, 20002, 21680], "outbound": "🎯 全球直连" },
       { "domain_suffix": [".ddqq.top", ".ddqq.fun", ".alibar.us.kg", ".ddqq.cloudns.org", ".ali88.ggff.net", ".hkdvb.com"], "outbound": "🎯 全球直连" },
